log/build_2026-03-03_15-34-31/buoy_control/stderr.log
  File "/home/selqie/buoyancy/install/buoy_control/lib/python3.12/site-packages/buoy_control/timer_control.py", line 22
    self.declare_parameter('start_time', 30
                          ^
SyntaxError: '(' was never closed

